inner pages design going on for services.

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <button type="button" class="btn btn-success btn-floating btn-lg" id="btn-back-to-top" style="z-index: 99;">
+  <button type="button" class="btn btn-success btn-floating btn-lg" id="btn-back-to-top" style="z-index: 100099;">
     <i class="bi bi-arrow-up"></i>
   </button>
 
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-md-8 col-xs-12">
           <ul class="left-info">
-            <li><a href="" onclick='return false;'><i class="fa fa-clock-o"></i>Sun-Fri 07:00-15:00</a></li>
+            <li><a href="" onclick='return false;'><i class="fa fa-clock-o"></i>Sun-Fri 07:00-15:00 GMT +5:45</a></li>
             <li><a href="tel:+977-015432827"><i class="fa fa-phone"></i>+977-01-5432827</a></li>
             <li><a href="tel:+977-015520512"><i class="fa fa-phone"></i>+977-01-5520512</a></li>
           </ul>
@@ -369,23 +369,246 @@
               </div>
             </div>
           </div>
-
-
-
-
-
         </div>
       </div>
     </div>
   </div>
 
+  <!-- carousel -->
+  <div class="section-heading" style="margin-top: 50px;">
+    <h2> <em>Our </em> Projects</h2>
+    <span>Various projects that have been successfully completed since the establishment of organization (2054 BS) and
+      are still undergoing.</span>
+  </div>
+  <div class="carousel" id="ourprojects">
+    <!-- list item -->
+    <div class="list">
+      <div class="item">
+        <img src="./assets/images/projects/1.jpg">
+        <div class="content">
+          <!-- <div class="author">GiorgioGT</div> -->
+          <div class="title">PROJECT_TITLE</div>
+          <div class="topic">Collaboration_with</div>
+          <div class="des">
+            <!-- lorem 50 -->
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat,
+            itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut
+            doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut,
+            exercitationem eum aperiam illo illum laudantium?
+          </div>
+          <div class="buttons">
+            <button onclick="window.location.href='https://www.nepsemyak.com.np';">SEE MORE</button>
+            <!-- <button>SUBSCRIBE</button> -->
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/2.jpg">
+        <div class="content">
+          <!-- <div class="author">giorgioGT</div> -->
+          <div class="title">PROJECT_TITLE</div>
+          <div class="topic">Collaboration_with</div>
+          <div class="des">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat,
+            itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut
+            doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut,
+            exercitationem eum aperiam illo illum laudantium?
+          </div>
+          <div class="buttons">
+            <button onclick="window.location.href='https://www.nepsemyak.com.np';">SEE MORE</button>
+            <!-- <button>SUBSCRIBE</button> -->
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/3.jpg">
+        <div class="content">
+          <!-- <div class="author">giorgioGT</div> -->
+          <div class="title">PROJECT_TITLE</div>
+          <div class="topic">Collaboration_with</div>
+          <div class="des">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat,
+            itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut
+            doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut,
+            exercitationem eum aperiam illo illum laudantium?
+          </div>
+          <div class="buttons">
+            <button onclick="window.location.href='https://www.nepsemyak.com.np';">SEE MORE</button>
+            <!-- <button>SUBSCRIBE</button> -->
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/4.jpg">
+        <div class="content">
+          <!-- <div class="author">giorgioGT</div> -->
+          <div class="title">PROJECT_TITLE</div>
+          <div class="topic">Collaboration_with</div>
+          <div class="des">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat,
+            itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut
+            doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut,
+            exercitationem eum aperiam illo illum laudantium?
+          </div>
+          <div class="buttons">
+            <button onclick="window.location.href='https://www.nepsemyak.com.np';">SEE MORE</button>
+            <!-- <button>SUBSCRIBE</button> -->
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/5.png">
+        <div class="content">
+          <!-- <div class="author">giorgioGT</div> -->
+          <div class="title">PROJECT_TITLE</div>
+          <div class="topic">Collaboration_with</div>
+          <div class="des">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat,
+            itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut
+            doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut,
+            exercitationem eum aperiam illo illum laudantium?
+          </div>
+          <div class="buttons">
+            <button onclick="window.location.href='https://www.nepsemyak.com.np';">SEE MORE</button>
+            <!-- <button>SUBSCRIBE</button> -->
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/6.jpg">
+        <div class="content">
+          <!-- <div class="author">giorgioGT</div> -->
+          <div class="title">PROJECT_TITLE</div>
+          <div class="topic">Collaboration_with</div>
+          <div class="des">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat,
+            itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut
+            doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut,
+            exercitationem eum aperiam illo illum laudantium?
+          </div>
+          <div class="buttons">
+            <button onclick="window.location.href='https://www.nepsemyak.com.np';">SEE MORE</button>
+            <!-- <button>SUBSCRIBE</button> -->
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/7.jpg">
+        <div class="content">
+          <!-- <div class="author">giorgioGT</div> -->
+          <div class="title">PROJECT_TITLE</div>
+          <div class="topic">Collaboration_with</div>
+          <div class="des">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat,
+            itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut
+            doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut,
+            exercitationem eum aperiam illo illum laudantium?
+          </div>
+          <div class="buttons">
+            <button onclick="window.location.href='https://www.nepsemyak.com.np';">SEE MORE</button>
+            <!-- <button>SUBSCRIBE</button> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- list thumnail -->
+    <div class="thumbnail" style="display:hidden;">
+      <div class="item">
+        <img src="./assets/images/projects/1.jpg">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="description">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/2.jpg">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="description">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/3.jpg">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="description">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/4.jpg">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="description">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/5.png">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="description">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/6.jpg">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="description">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./assets/images/projects/7.jpg">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="description">
+            Description
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- next prev -->
+    <div class="arrows">
+      <button id="prev"><i class="bi bi-arrow-left"></i></button>
+      <button id="next"><i class="bi bi-arrow-right"></i></button>
+    </div>
+    <!-- time running -->
+    <div class="time"></div>
+  </div>
+
+  
   <div class="services" id="services">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="section-heading">
-            <h2>Our <em>Activities</em></h2>
-            <span>nepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMAC</span>
+            <h2>Our <em>Activities</em> / <em>Services</em></h2>
+            <span>Services that are provided by our organization.</span>
           </div>
         </div>
         <div class="col-md-4">
@@ -668,21 +891,21 @@
         <div class="col-md-2 footer-item">
           <h4>Download Materials</h4>
           <ul class="menu-list">
-            <li><a href="#">Newsletter</a></li>
-            <li><a href="#">Composting Manuals</a></li>
-            <li>  <i class="fa fa-angle-double-right"></i><a href="#"> Manure</a></li>
-            <li>  <i class="fa fa-angle-double-right"></i><a href="#"> EM, Bokasi</a></li>
-            <li>  <i class="fa fa-angle-double-right"></i><a href="#"> Vermi</a></li>
+            <li><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">Newsletter</a></li>
+            <li><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">Composting Manuals</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html"> Manure</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html"> EM, Bokasi</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html"> Vermi</a></li>
           </ul>
         </div>
         <div class="col-md-2 footer-item">
           <h4>Additional Pages</h4>
           <ul class="menu-list">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">How We Work</a></li>
-            <li><a href="#">Quick Support</a></li>
+            <li><a href="./in_pg/about.html">About Us</a></li>
+            <li><a href="./in_pg/methodology.html">How We Work</a></li>
+            <li><a href="./in_pg/support.html">Quick Support</a></li>
             <li><a href="#contactus">Contact Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
+            <!-- <li><a href="#">Privacy Policy</a></li> -->
           </ul>
         </div>
         <div class="col-md-4 footer-item last-item" id="our_circle">
@@ -746,6 +969,7 @@
   <script src="assets/js/slick.js"></script>
   <script src="assets/js/accordions.js"></script>
   <script src="assets/js/back-top.js"></script>
+  <script src="assets/js/carousel.js"></script>
   <script>
     $(function () {
       // Single Page Nav
@@ -769,7 +993,7 @@
         t.value = '';                          // with more chance of typos
         t.style.color = '#fff';
       }
-    }
+    } 
   </script>
 
   <!--Start of Tawk.to Script-->
@@ -778,7 +1002,7 @@
     (function () {
       var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
       s1.async = true;
-      s1.src = 'https://embed.tawk.to/600c5495c31c9117cb71bab4/1eso2kqh7';
+      s1.src = 'https://embed.tawk.to/662b0a4ca0c6737bd130914f/1hsc20evd';
       s1.charset = 'UTF-8';
       s1.setAttribute('crossorigin', '*');
       s0.parentNode.insertBefore(s1, s0);
