--- a/templatemo_545_finance_business/services.html
+++ b/templatemo_545_finance_business/services.html
@@ -23,21 +23,24 @@
   <link rel="stylesheet" href="assets/css/owl.css">
   <!-- NEPCEMAC -->
   <script src="https://www.youtube.com/iframe_api"></script>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
   <!-- ***** Preloader Start ***** -->
-  <!-- <div id="preloader">
+  <div id="preloader">
     <div class="jumper">
       <div></div>
       <div></div>
       <div></div>
     </div>
-  </div> -->
+  </div>
   <!-- ***** Preloader End ***** -->
 
   <!-- Header -->
@@ -94,7 +97,7 @@
       </div>
     </nav>
   </header>
- 
+
   <!-- Page Content -->
   <div class="page-heading header-text">
     <div class="container">
@@ -108,255 +111,156 @@
   </div>
 
 
-
-  <ul class="nav nav-pills nav-stacked col-md-2">
-    <li class="active"><a href="#tab_a" data-toggle="pill">Pill A</a></li>
-    <li><a href="#tab_b" data-toggle="pill">Pill B</a></li>
-    <li><a href="#tab_c" data-toggle="pill">Pill C</a></li>
-    <li><a href="#tab_d" data-toggle="pill">Pill D</a></li>
-  </ul>
-  <div class="tab-content col-md-10">
-    <div class="tab-pane active" id="tab_a">
-      <h4>Pane A</h4>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames
-        ac turpis egestas.</p>
-    </div>
-    <div class="tab-pane" id="tab_b">
-      <h4>Pane B</h4>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames
-        ac turpis egestas.</p>
-    </div>
-    <div class="tab-pane" id="tab_c">
-      <h4>Pane C</h4>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames
-        ac turpis egestas.</p>
-    </div>
-    <div class="tab-pane" id="tab_d">
-      <h4>Pane D</h4>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames
-        ac turpis egestas.</p>
-    </div>
-  </div><!-- tab content -->
-  </div>
-
   <div class="single-services">
     <div class="container">
-      <div class="row" id="tabs">
-        <div class="col-md-3">
-          <ul>
-            <li><a href='#tabs-1'>Project_1 <i class="fa fa-angle-right"></i></a></li>
-            <li><a href='#tabs-2'>Project_2 <i class="fa fa-angle-right"></i></a></li>
-            <li><a href='#tabs-3'>Project_3 <i class="fa fa-angle-right"></i></a></li>
-            <li><a href='#tabs-4'>Project_4 <i class="fa fa-angle-right"></i></a></li>
-          </ul>
-          <div class="input">
-            <ul>
-              <li><a class="value" href='#tabs-1'>
-                  <button>
-                    Public profile
-                  </button>
-                </a>
-              </li>
-              <li><a class="value" href='#tabs-2'>
-                  <button>
-                    Account
-                  </button>
-                </a>
-              </li>
-              <li><a class="value" href='#tabs-3'>
-                  <button>
-                    Appearance
-                  </button>
-                </a>
-              </li>
-              <li><a class="value" href='#tabs-4'>
-                  <button>
-                    Accessibility
-                  </button>
-                </a>
-              </li>
-              <li><a class="value" href='#tabs-5'>
-                  <button>
-                    Notifications
-                  </button>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-9">
-          <section class='tabs-content'>
-            <article id='tabs-1'>
-              <img src="assets/images/projects/1.jpg" alt="">
-              <h4>Market Analysis</h4>
-              <p>Vivamus sed feugiat elit. Pellentesque pretium, massa at placerat vehicula, neque turpis pulvinar
-                tortor, eget convallis lorem odio non tortor. Donec massa est, fermentum sit amet felis ac, maximus
-                luctus elit. Vivamus aliquet, dolor id imperdiet imperdiet, dui diam aliquet dui, a euismod metus enim
-                ac velit. Vivamus eu tristique odio, vel tristique quam.
-                <br><br>Proin eu molestie risus. Etiam suscipit pretium odio, at consectetur nisi. Sed ut dolor in augue
-                cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel diam. Sed vitae
-                scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante.
-              </p>
-            </article>
-            <article id='tabs-2'>
-              <img src="assets/images/projects/2.jpg" alt="">
-              <h4>Financial Data</h4>
-              <p>Sed ut dolor in augue cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel
-                diam. Sed vitae scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante, quis posuere nibh
-                vestibulum sit amet
-                <br><br>Pellentesque pretium, massa at placerat vehicula, neque turpis pulvinar tortor, eget convallis
-                lorem odio non tortor. Donec massa est, fermentum sit amet felis ac, maximus luctus elit. Vivamus
-                aliquet, dolor id imperdiet imperdiet, dui diam aliquet dui, a euismod metus enim ac velit. Vivamus eu
-                tristique odio, vel tristique quam.
-              </p>
-            </article>
-            <article id='tabs-3'>
-              <img src="assets/images/projects/3.jpg" alt="">
-              <h4>Accounting Service</h4>
-              <p>Mauris lobortis quam id dictum dignissim. Donec pellentesque erat dolor, cursus dapibus turpis
-                hendrerit quis. Suspendisse at suscipit arcu. Nulla sed erat lectus. Nulla facilisi. In sit amet neque
-                sapien. Donec scelerisque mi at gravida efficitur. Nunc lacinia a est eu malesuada. Curabitur eleifend
-                elit sapien, sed pulvinar orci luctus eget.
-                <br><br>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc
-                vel ultrices nulla, ac tincidunt eros. Aenean quis tellus velit. Praesent pretium justo non auctor
-                condimentum.
-              </p>
-            </article>
-            <article id='tabs-4'>
-              <img src="assets/images/projects/4.jpg" alt="">
-              <h4>Overall Evaluation</h4>
-              <p>Integer vehicula sapien quis dolor efficitur, eget molestie eros tempus. Curabitur sollicitudin, tortor
-                at suscipit volutpat, nisi arcu aliquet dui, vitae semper sem turpis quis libero. Quisque vulputate
-                lacinia nisl ac lobortis. Ut ultricies maximus turpis, in sollicitudin ligula posuere vel.
-                <br><br>Donec finibus maximus neque, vitae egestas quam imperdiet nec. Proin nec mauris eu tortor
-                consectetur tristique. Etiam suscipit ante a odio consequat, in ornare lacus suscipit. Cras ac libero
-                massa. Quisque rhoncus velit feugiat vulputate mollis. Donec nisl eros, malesuada sed nisi id,
-                condimentum condimentum quam.
-              </p>
-            </article>
-          </section>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- <div class="partners">
-    <div class="container">
+      <h1>Bootstrap 4 Vertical Nav Tabs</h1>
+      <hr>
       <div class="row">
-        <div class="col-md-12">
-          <div class="owl-partners owl-carousel">
-            <div class="partner-item">
-              <img src="assets/images/client-01.png" alt="">
+        <div class="col-md-4 mb-5">
+          <ul class="nav nav-pills flex-column" id="myTab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="home"
+                aria-selected="true">AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="profile"
+                aria-selected="false">WASTE SEGREGATION AWARENESS CAMPAIGN</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="contact-tab" data-toggle="tab" href="#tab3" role="tab" aria-controls="contact"
+                aria-selected="false">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-8">
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+              <h2>AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="profile-tab">
+              <h2>WASTE SEGREGATION AWARENESS CAMPAIGN</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="contact-tab">
+              <h2>Contact</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div> -->
 
 
-  <!-- Footer Starts Here -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 footer-item">
-          <h4>Finance Business</h4>
-          <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
-          <ul class="social-icons">
-            <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-behance"></i></a></li>
-          </ul>
+    <!-- Footer Starts Here -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 footer-item">
+            <h4>Finance Business</h4>
+            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.
+            </p>
+            <ul class="social-icons">
+              <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fa fa-behance"></i></a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 footer-item">
+            <h4>Useful Links</h4>
+            <ul class="menu-list">
+              <li><a href="#">Vivamus ut tellus mi</a></li>
+              <li><a href="#">Nulla nec cursus elit</a></li>
+              <li><a href="#">Vulputate sed nec</a></li>
+              <li><a href="#">Cursus augue hasellus</a></li>
+              <li><a href="#">Lacinia ac sapien</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 footer-item">
+            <h4>Additional Pages</h4>
+            <ul class="menu-list">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">How We Work</a></li>
+              <li><a href="#">Quick Support</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 footer-item last-item">
+            <h4>Contact Us</h4>
+            <div class="contact-form">
+              <form id="contact footer-contact" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12 col-md-12 col-sm-12">
+                    <fieldset>
+                      <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12 col-md-12 col-sm-12">
+                    <fieldset>
+                      <input name="email" type="text" class="form-control" id="email" pattern="[^ @]*@[^ @]*"
+                        placeholder="E-Mail Address" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message"
+                        required=""></textarea>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="filled-button">Send Message</button>
+                    </fieldset>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
-        <div class="col-md-3 footer-item">
-          <h4>Useful Links</h4>
-          <ul class="menu-list">
-            <li><a href="#">Vivamus ut tellus mi</a></li>
-            <li><a href="#">Nulla nec cursus elit</a></li>
-            <li><a href="#">Vulputate sed nec</a></li>
-            <li><a href="#">Cursus augue hasellus</a></li>
-            <li><a href="#">Lacinia ac sapien</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 footer-item">
-          <h4>Additional Pages</h4>
-          <ul class="menu-list">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">How We Work</a></li>
-            <li><a href="#">Quick Support</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 footer-item last-item">
-          <h4>Contact Us</h4>
-          <div class="contact-form">
-            <form id="contact footer-contact" action="" method="post">
-              <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                  <fieldset>
-                    <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                  </fieldset>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                  <fieldset>
-                    <input name="email" type="text" class="form-control" id="email" pattern="[^ @]*@[^ @]*"
-                      placeholder="E-Mail Address" required="">
-                  </fieldset>
-                </div>
-                <div class="col-lg-12">
-                  <fieldset>
-                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message"
-                      required=""></textarea>
-                  </fieldset>
-                </div>
-                <div class="col-lg-12">
-                  <fieldset>
-                    <button type="submit" id="form-submit" class="filled-button">Send Message</button>
-                  </fieldset>
-                </div>
-              </div>
-            </form>
+      </div>
+    </footer>
+
+    <div class="sub-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+
+              - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
           </div>
         </div>
       </div>
     </div>
-  </footer>
 
-  <div class="sub-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
+    <!-- Additional Scripts -->
+    <script src="assets/js/custom.js"></script>
+    <!-- <script src="assets/js/owl.js"></script> -->
+    <!-- <script src="assets/js/slick.js"></script> -->
+    <script src="assets/js/accordions.js"></script>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <!-- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
-
-  <!-- Additional Scripts -->
-  <script src="assets/js/custom.js"></script>
-  <!-- <script src="assets/js/owl.js"></script> -->
-  <!-- <script src="assets/js/slick.js"></script> -->
-  <script src="assets/js/accordions.js"></script>
-
-  <script language="text/Javascript">
-    cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
-    function clearField(t) {                   //declaring the array outside of the
-      if (!cleared[t.id]) {                      // function makes it static and global
-        cleared[t.id] = 1;  // you could use true and false, but that's more typing
-        t.value = '';         // with more chance of typos
-        t.style.color = '#fff';
+    <script language="text/Javascript">
+      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
+      function clearField(t) {                   //declaring the array outside of the
+        if (!cleared[t.id]) {                      // function makes it static and global
+          cleared[t.id] = 1;  // you could use true and false, but that's more typing
+          t.value = '';         // with more chance of typos
+          t.style.color = '#fff';
+        }
       }
-    }
-  </script>
+    </script>
 
 </body>
 
