made the tabs working for 13 items in it

--- a/templatemo_545_finance_business/services.html
+++ b/templatemo_545_finance_business/services.html
@@ -104,7 +104,7 @@
       <div class="row">
         <div class="col-md-12">
           <h1>Our Services</h1>
-          <span>We are over 20 years of experience</span>
+          <span style="display: flex; align-items: center;margin-left: 25%;">The services we have been providing for the past <span id="timeElapsed" style="margin-left: 5px;font-weight: bolder;font-size: 20px;"> </span>  years</span>
         </div>
       </div>
     </div>
@@ -119,16 +119,56 @@
         <div class="col-md-4 mb-5">
           <ul class="nav nav-pills flex-column" id="myTab" role="tablist">
             <li class="nav-item">
-              <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="home"
+              <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
                 aria-selected="true">AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="profile"
+              <a class="nav-link" id="tab2-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
                 aria-selected="false">WASTE SEGREGATION AWARENESS CAMPAIGN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="contact-tab" data-toggle="tab" href="#tab3" role="tab" aria-controls="contact"
-                aria-selected="false">Contact</a>
+              <a class="nav-link" id="tab3-tab" data-toggle="tab" href="#tab3" role="tab" aria-controls="tab3"
+                aria-selected="false">PUBLIC AWARENESS PROGRAMS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab4-tab" data-toggle="tab" href="#tab4" role="tab" aria-controls="tab4"
+                aria-selected="false">STREET SWEEPING AND RIVER CLEANING CAMPAIGN</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab5-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="tab5"
+                aria-selected="false">COMMUNITY MOBILIZATION</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab6-tab" data-toggle="tab" href="#tab6" role="tab" aria-controls="tab6"
+                aria-selected="false">BUSH REMOVING</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab7-tab" data-toggle="tab" href="#tab7" role="tab" aria-controls="tab7"
+                aria-selected="false">PUBLICATION</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab8-tab" data-toggle="tab" href="#tab8" role="tab" aria-controls="tab8"
+                aria-selected="false">TRAINING</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab9-tab" data-toggle="tab" href="#tab9" role="tab" aria-controls="tab9"
+                aria-selected="false">COMPOSTING</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab10-tab" data-toggle="tab" href="#tab10" role="tab" aria-controls="tab10"
+                aria-selected="false">MARKETING OF COMPOST BINS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab11-tab" data-toggle="tab" href="#tab11" role="tab" aria-controls="tab11"
+                aria-selected="false">GREENERY DEVELOPMENT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab12-tab" data-toggle="tab" href="#tab12" role="tab" aria-controls="tab12"
+                aria-selected="false">PAPER RECYCLING</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="tab13-tab" data-toggle="tab" href="#tab13" role="tab" aria-controls="tab13"
+                aria-selected="false">HEALTH SERVICES</a>
             </li>
           </ul>
         </div>
@@ -140,14 +180,74 @@
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
-            <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
               <h2>WASTE SEGREGATION AWARENESS CAMPAIGN</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
-            <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="contact-tab">
-              <h2>Contact</h2>
+            <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+              <h2>PUBLIC AWARENESS PROGRAMS</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
+              <h2>STREET SWEEPING AND RIVER CLEANING CAMPAIGN</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
+              <h2>COMMUNITY MOBILIZATION</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
+              <h2>BUSH REMOVING</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab7" role="tabpanel" aria-labelledby="tab7-tab">
+              <h2>PUBLICATION</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab8" role="tabpanel" aria-labelledby="tab8-tab">
+              <h2>TRAINING</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab9" role="tabpanel" aria-labelledby="tab9-tab">
+              <h2>COMPOSTING</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab10" role="tabpanel" aria-labelledby="tab10-tab">
+              <h2>MARKETING OF COMPOST BINS</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab11" role="tabpanel" aria-labelledby="tab11-tab">
+              <h2>GREENERY DEVELOPMENT</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab12" role="tabpanel" aria-labelledby="tab12-tab">
+              <h2>PAPER RECYCLING</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
+                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+            </div>
+            <div class="tab-pane fade" id="tab13" role="tabpanel" aria-labelledby="tab13-tab">
+              <h2>HEALTH SERVICES</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
@@ -250,6 +350,24 @@
     <!-- <script src="assets/js/owl.js"></script> -->
     <!-- <script src="assets/js/slick.js"></script> -->
     <script src="assets/js/accordions.js"></script>
+    <script>
+      function calculateTimeElapsed() {
+        // Set the start date (in this example, January 1, 2020)
+        const startDate = new Date(1997, 3, 28);
+
+        // Get the current date
+        const currentDate = new Date();
+
+        // Calculate the time elapsed in years
+        const timeDiff = currentDate.getTime() - startDate.getTime();
+        const yearsElapsed = Math.floor(timeDiff / (1000 * 60 * 60 * 24 * 365.25));
+
+        return yearsElapsed;
+      }
+
+      // Update the time elapsed text
+      document.getElementById('timeElapsed').textContent = calculateTimeElapsed();
+    </script>
 
     <script language="text/Javascript">
       cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
