changed the tabs color in services site

--- a/templatemo_545_finance_business/services.html
+++ b/templatemo_545_finance_business/services.html
@@ -113,7 +113,7 @@
 
   <div class="single-services">
     <div class="container">
-      <h1>Bootstrap 4 Vertical Nav Tabs</h1>
+      <h1>Services:</h1>
       <hr>
       <div class="row">
         <div class="col-md-4 mb-5">
