images in services site framing done

--- a/templatemo_545_finance_business/services.html
+++ b/templatemo_545_finance_business/services.html
@@ -176,79 +176,92 @@
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
               <h2>AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
               <h2>WASTE SEGREGATION AWARENESS CAMPAIGN</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
               <h2>PUBLIC AWARENESS PROGRAMS</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
               <h2>STREET SWEEPING AND RIVER CLEANING CAMPAIGN</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
               <h2>COMMUNITY MOBILIZATION</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
               <h2>BUSH REMOVING</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab7" role="tabpanel" aria-labelledby="tab7-tab">
               <h2>PUBLICATION</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab8" role="tabpanel" aria-labelledby="tab8-tab">
               <h2>TRAINING</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab9" role="tabpanel" aria-labelledby="tab9-tab">
               <h2>COMPOSTING</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab10" role="tabpanel" aria-labelledby="tab10-tab">
               <h2>MARKETING OF COMPOST BINS</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab11" role="tabpanel" aria-labelledby="tab11-tab">
               <h2>GREENERY DEVELOPMENT</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab12" role="tabpanel" aria-labelledby="tab12-tab">
               <h2>PAPER RECYCLING</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
             <div class="tab-pane fade" id="tab13" role="tabpanel" aria-labelledby="tab13-tab">
               <h2>HEALTH SERVICES</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class = "service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
                 accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
                 blanditiis voluptates vel ipsam? Facilis, earum!</p>
             </div>
