--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -380,7 +380,7 @@
     <!-- list item -->
     <div class="list">
       <div class="item">
-        <img src="./assets/images/projects/1.jpg">
+        <img src="./assets/images/projects/1.png">
         <div class="content">
           <!-- <div class="author">GiorgioGT</div> -->
           <div class="title">PROJECT_TITLE</div>
@@ -399,7 +399,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/projects/2.jpg">
+        <img src="./assets/images/projects/2.png">
         <div class="content">
           <!-- <div class="author">giorgioGT</div> -->
           <div class="title">PROJECT_TITLE</div>
@@ -417,7 +417,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/projects/3.jpg">
+        <img src="./assets/images/projects/3.png">
         <div class="content">
           <!-- <div class="author">giorgioGT</div> -->
           <div class="title">PROJECT_TITLE</div>
@@ -435,7 +435,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/projects/4.jpg">
+        <img src="./assets/images/projects/4.png">
         <div class="content">
           <!-- <div class="author">giorgioGT</div> -->
           <div class="title">PROJECT_TITLE</div>
@@ -471,7 +471,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/projects/6.jpg">
+        <img src="./assets/images/projects/6.png">
         <div class="content">
           <!-- <div class="author">giorgioGT</div> -->
           <div class="title">PROJECT_TITLE</div>
@@ -489,7 +489,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/projects/7.jpg">
+        <img src="./assets/images/projects/7.png">
         <div class="content">
           <!-- <div class="author">giorgioGT</div> -->
           <div class="title">PROJECT_TITLE</div>
@@ -607,70 +607,136 @@
             <span>Services that are provided by our organization.</span>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="service-item">
             <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
-              <h4>Waste Segregation Campaigns</h4>
-              <p>Programs that promote segregation of waste at the source of production (household kitchens) and educate
-                people about the benefits of separating biodegradable and non-biodegradable waste</p>
+              <h4>AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</h4>
+              <!-- <p>Programs that promote segregation of waste at the source of production (household kitchens) and educate
+                people about the benefits of separating biodegradable and non-biodegradable waste</p> -->
               <!-- <a href="" class="filled-button">Read More</a> -->
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="service-item">
             <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
-              <h4>Waste collection & transportation awareness</h4>
-              <p>Programs to raise awareness about the proper collection and transportation of waste, to improve the
-                waste management process.</p>
+              <h4>WASTE SEGREGATION AWARENESS CAMPAIGN</h4>
+              <!-- <p>Programs to raise awareness about the proper collection and transportation of waste, to improve the
+                waste management process.</p> -->
               <!-- <a href="" class="filled-button">Read More</a> -->
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="service-item">
             <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
-              <h4>Publications</h4>
-              <p>Programs that publish a yearly newsletter 'NEPCEMAC SANDESH' and other publications to inform
-                stakeholders, community, as well as minded organizations and service holders regarding environmental
+              <h4>PUBLIC AWARENESS PROGRAMS</h4>
+              <!-- <p>Programs that publish a yearly newsletter 'NEPCEMAC SANDESH' and other publications to inform
                 issues and waste management.</p>
+                stakeholders, community, as well as minded organizations and service holders regarding environmental -->
               <!-- <a href="" class="filled-button">Read More</a> -->
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="service-item">
             <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
-              <h4>Public Awareness Programs</h4>
-              <p>Programs that aim to educate and raise awareness about solid waste management issues through various
-                methods such as orientations, trainings, mass campaigns, exhibitions, street dramas, songs, poetry,
+              <h4>STREET SWEEPING AND RIVER CLEANING CAMPAIGN</h4>
+              <!-- <p>Programs that aim to educate and raise awareness about solid waste management issues through various
                 shows, video documentaries and the use of pamphlets.</p>
+                methods such as orientations, trainings, mass campaigns, exhibitions, street dramas, songs, poetry, -->
               <!-- <a href="" class="filled-button">Read More</a> -->
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="service-item">
             <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
-              <h4>Street Sweeping and River Cleaning</h4>
-              <p>Programs that organize cleaning of streets and river banks in areas where door-to-door waste collection
-                services are delivered.</p>
+              <h4>COMMUNITY MOBILIZATION</h4>
+              <!-- <p>Programs that organize cleaning of streets and river banks in areas where door-to-door waste collection
+                services are delivered.</p> -->
               <!-- <a href="" class="filled-button">Read More</a> -->
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="service-item">
             <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
-              <h4>Community Mobilization</h4>
-              <p>Programs that mobilize the community to take active part in improving environmental pollution at the
-                local place.</p>
+              <h4>BUSH REMOVING</h4>
+              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                local place.</p> -->
+              <!-- <a href="" class="filled-button">Read More</a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-item">
+            <img src="assets/images/scroll/1.png" alt="">
+            <div class="down-content">
+              <h4>PUBLICATION</h4>
+              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                local place.</p> -->
+              <!-- <a href="" class="filled-button">Read More</a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-item">
+            <img src="assets/images/scroll/1.png" alt="">
+            <div class="down-content">
+              <h4>TRAINING</h4>
+              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                local place.</p> -->
+              <!-- <a href="" class="filled-button">Read More</a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-item">
+            <img src="assets/images/scroll/1.png" alt="">
+            <div class="down-content">
+              <h4>COMPOSTING</h4>
+              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                local place.</p> -->
+              <!-- <a href="" class="filled-button">Read More</a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-item">
+            <img src="assets/images/scroll/1.png" alt="">
+            <div class="down-content">
+              <h4>MARKETING OF COMPOST BINS</h4>
+              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                local place.</p> -->
+              <!-- <a href="" class="filled-button">Read More</a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-item">
+            <img src="assets/images/scroll/1.png" alt="">
+            <div class="down-content">
+              <h4>GREENERY DEVELOPMENT</h4>
+              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                local place.</p> -->
+              <!-- <a href="" class="filled-button">Read More</a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-item">
+            <img src="assets/images/scroll/1.png" alt="">
+            <div class="down-content">
+              <h4>PAPER RECYCLING</h4>
+              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                local place.</p> -->
               <!-- <a href="" class="filled-button">Read More</a> -->
             </div>
           </div>
